# AlexFreqAlphaDeck

./: .env  .gitignore  LICENSE  README.md  docker-compose.yml  install.sh
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_seed_admin_user.py  v6_strategy_lab.py
backend/sql/: finance_tables.sql
backend/src/: config.py  main.py
backend/src/api/: __init__.py  agent.py  alerts.py  auth.py  backtest.py  bots.py  deps.py  discovery.py  finance.py  historic.py  pairlist_results.py  pairlist_selector.py  portfolio.py  settings.py  strategy_lab.py  unified_settings.py  users.py  websocket.py
backend/src/api/backup/: patch_strategy_lab.py  strategy_lab.py
backend/src/db/: analytics.py
backend/src/models/: __init__.py  agent.py  alert.py  bot.py  metrics.py  pairlist.py  settings.py  user.py
backend/src/schemas/: alert.py  bot.py  common.py  discovery.py  portfolio.py  trades.py
backend/src/scripts/: create_admin.py
backend/src/services/: OK_aggregator.py  agent_docker.py  aggregator.py  cache.py  health.py  log_monitor.py  trade_monitor.py  websocket.py
backend/src/services/connectors/: __init__.py  _sqlite.py.bak  api.py  base.py  manager.py
backend/src/services/discovery/: __init__.py  docker.py  filesystem.py  orchestrator.py  scheduler.py
backend/src/services/finance_collectors/: __init__.py  bybit_collector.py  crypto_collector.py  economic_collector.py  scheduler.py  stock_collector.py
backend/src/services/ftmanager/: config.py  (+7 more)
backend/src/utils/: security.py
(+117 files in other folders)
